add new calculation and method

--- a/result_analysis.ipynb
+++ b/result_analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,12 +36,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>random kmeans</th>\n",
-       "      <th>kde kmeans</th>\n",
        "      <th>kmeans++</th>\n",
        "      <th>random SOM</th>\n",
        "      <th>kmeans SOM</th>\n",
-       "      <th>kde kmeans SOM</th>\n",
        "      <th>kmeans++ SOM</th>\n",
        "      <th>SOM++</th>\n",
        "      <th>kde SOM</th>\n",
@@ -50,97 +47,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.804698</td>\n",
-       "      <td>0.829422</td>\n",
-       "      <td>0.545900</td>\n",
-       "      <td>0.861058</td>\n",
-       "      <td>0.501386</td>\n",
-       "      <td>0.440426</td>\n",
-       "      <td>0.835837</td>\n",
-       "      <td>0.496340</td>\n",
-       "      <td>0.694666</td>\n",
+       "      <td>0.289166</td>\n",
+       "      <td>0.412340</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.818857</td>\n",
+       "      <td>0.301438</td>\n",
+       "      <td>0.600509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.808746</td>\n",
-       "      <td>0.812297</td>\n",
-       "      <td>0.637061</td>\n",
-       "      <td>0.704290</td>\n",
-       "      <td>0.262494</td>\n",
-       "      <td>0.643603</td>\n",
-       "      <td>0.835837</td>\n",
-       "      <td>0.412662</td>\n",
-       "      <td>0.823326</td>\n",
+       "      <td>0.245666</td>\n",
+       "      <td>0.281276</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.818857</td>\n",
+       "      <td>0.416755</td>\n",
+       "      <td>0.401765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.805003</td>\n",
-       "      <td>0.820602</td>\n",
-       "      <td>0.662935</td>\n",
-       "      <td>0.835837</td>\n",
-       "      <td>0.434176</td>\n",
-       "      <td>0.835837</td>\n",
-       "      <td>0.835837</td>\n",
-       "      <td>0.641102</td>\n",
-       "      <td>0.454433</td>\n",
+       "      <td>0.291146</td>\n",
+       "      <td>0.134187</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.197652</td>\n",
+       "      <td>0.295884</td>\n",
+       "      <td>0.431230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.812724</td>\n",
-       "      <td>0.813251</td>\n",
-       "      <td>0.638596</td>\n",
-       "      <td>0.669911</td>\n",
-       "      <td>-0.172054</td>\n",
-       "      <td>0.819307</td>\n",
-       "      <td>0.704746</td>\n",
-       "      <td>0.684856</td>\n",
-       "      <td>0.689535</td>\n",
+       "      <td>0.266322</td>\n",
+       "      <td>0.415510</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.150591</td>\n",
+       "      <td>0.462891</td>\n",
+       "      <td>0.440789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.833048</td>\n",
-       "      <td>0.812371</td>\n",
-       "      <td>0.686444</td>\n",
-       "      <td>0.597210</td>\n",
-       "      <td>0.643603</td>\n",
-       "      <td>0.523209</td>\n",
-       "      <td>0.537983</td>\n",
-       "      <td>0.487481</td>\n",
-       "      <td>0.791981</td>\n",
+       "      <td>0.240766</td>\n",
+       "      <td>0.282193</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.293437</td>\n",
+       "      <td>0.200235</td>\n",
+       "      <td>0.390512</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   random kmeans  kde kmeans  kmeans++  random SOM  kmeans SOM  \\\n",
-       "0       0.804698    0.829422  0.545900    0.861058    0.501386   \n",
-       "1       0.808746    0.812297  0.637061    0.704290    0.262494   \n",
-       "2       0.805003    0.820602  0.662935    0.835837    0.434176   \n",
-       "3       0.812724    0.813251  0.638596    0.669911   -0.172054   \n",
-       "4       0.833048    0.812371  0.686444    0.597210    0.643603   \n",
-       "\n",
-       "   kde kmeans SOM  kmeans++ SOM     SOM++   kde SOM  \n",
-       "0        0.440426      0.835837  0.496340  0.694666  \n",
-       "1        0.643603      0.835837  0.412662  0.823326  \n",
-       "2        0.835837      0.835837  0.641102  0.454433  \n",
-       "3        0.819307      0.704746  0.684856  0.689535  \n",
-       "4        0.523209      0.537983  0.487481  0.791981  "
+       "   kmeans++  random SOM  kmeans SOM  kmeans++ SOM     SOM++   kde SOM\n",
+       "0  0.289166    0.412340          -1      0.818857  0.301438  0.600509\n",
+       "1  0.245666    0.281276          -1      0.818857  0.416755  0.401765\n",
+       "2  0.291146    0.134187          -1      0.197652  0.295884  0.431230\n",
+       "3  0.266322    0.415510          -1      0.150591  0.462891  0.440789\n",
+       "4  0.240766    0.282193          -1      0.293437  0.200235  0.390512"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"Datas/silhouette_score_data.csv\")\n",
+    "df = pd.read_csv(\"Datas/silhouette_score_data_dummy.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,21 +123,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 61 entries, 0 to 60\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   random kmeans   61 non-null     float64\n",
-      " 1   kde kmeans      61 non-null     float64\n",
-      " 2   kmeans++        61 non-null     float64\n",
-      " 3   random SOM      61 non-null     float64\n",
-      " 4   kmeans SOM      61 non-null     float64\n",
-      " 5   kde kmeans SOM  61 non-null     float64\n",
-      " 6   kmeans++ SOM    61 non-null     float64\n",
-      " 7   SOM++           61 non-null     float64\n",
-      " 8   kde SOM         61 non-null     float64\n",
-      "dtypes: float64(9)\n",
-      "memory usage: 4.4 KB\n"
+      "RangeIndex: 50 entries, 0 to 49\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   kmeans++      50 non-null     float64\n",
+      " 1   random SOM    50 non-null     float64\n",
+      " 2   kmeans SOM    50 non-null     int64  \n",
+      " 3   kmeans++ SOM  50 non-null     float64\n",
+      " 4   SOM++         50 non-null     float64\n",
+      " 5   kde SOM       50 non-null     float64\n",
+      "dtypes: float64(5), int64(1)\n",
+      "memory usage: 2.5 KB\n"
      ]
     }
    ],
@@ -172,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,12 +168,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>random kmeans</th>\n",
-       "      <th>kde kmeans</th>\n",
        "      <th>kmeans++</th>\n",
        "      <th>random SOM</th>\n",
        "      <th>kmeans SOM</th>\n",
-       "      <th>kde kmeans SOM</th>\n",
        "      <th>kmeans++ SOM</th>\n",
        "      <th>SOM++</th>\n",
        "      <th>kde SOM</th>\n",
@@ -210,127 +179,93 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>61.000000</td>\n",
-       "      <td>61.000000</td>\n",
-       "      <td>61.000000</td>\n",
-       "      <td>61.000000</td>\n",
-       "      <td>61.000000</td>\n",
-       "      <td>61.000000</td>\n",
-       "      <td>61.000000</td>\n",
-       "      <td>61.000000</td>\n",
-       "      <td>61.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.819159</td>\n",
-       "      <td>0.813473</td>\n",
-       "      <td>0.618012</td>\n",
-       "      <td>0.693520</td>\n",
-       "      <td>0.701473</td>\n",
-       "      <td>0.677770</td>\n",
-       "      <td>0.621770</td>\n",
-       "      <td>0.619107</td>\n",
-       "      <td>0.739507</td>\n",
+       "      <td>0.293441</td>\n",
+       "      <td>0.284671</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.420702</td>\n",
+       "      <td>0.358563</td>\n",
+       "      <td>0.470699</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.010744</td>\n",
-       "      <td>0.010611</td>\n",
-       "      <td>0.053229</td>\n",
-       "      <td>0.205709</td>\n",
-       "      <td>0.214761</td>\n",
-       "      <td>0.224464</td>\n",
-       "      <td>0.175790</td>\n",
-       "      <td>0.099741</td>\n",
-       "      <td>0.171969</td>\n",
+       "      <td>0.059780</td>\n",
+       "      <td>0.246599</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.343144</td>\n",
+       "      <td>0.143034</td>\n",
+       "      <td>0.098499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.800677</td>\n",
-       "      <td>0.761462</td>\n",
-       "      <td>0.522411</td>\n",
-       "      <td>0.000431</td>\n",
-       "      <td>-0.172054</td>\n",
-       "      <td>0.058380</td>\n",
-       "      <td>0.255623</td>\n",
-       "      <td>0.399404</td>\n",
-       "      <td>0.201198</td>\n",
+       "      <td>0.230376</td>\n",
+       "      <td>-0.391121</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.121161</td>\n",
+       "      <td>0.244234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.812210</td>\n",
-       "      <td>0.806601</td>\n",
-       "      <td>0.549835</td>\n",
-       "      <td>0.636704</td>\n",
-       "      <td>0.633966</td>\n",
-       "      <td>0.642380</td>\n",
-       "      <td>0.467525</td>\n",
-       "      <td>0.536706</td>\n",
-       "      <td>0.719996</td>\n",
+       "      <td>0.263892</td>\n",
+       "      <td>0.119075</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.291928</td>\n",
+       "      <td>0.262058</td>\n",
+       "      <td>0.396988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.814218</td>\n",
-       "      <td>0.813131</td>\n",
-       "      <td>0.646230</td>\n",
-       "      <td>0.774243</td>\n",
-       "      <td>0.806392</td>\n",
-       "      <td>0.793325</td>\n",
-       "      <td>0.670552</td>\n",
-       "      <td>0.655008</td>\n",
-       "      <td>0.804698</td>\n",
+       "      <td>0.277191</td>\n",
+       "      <td>0.332560</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.421840</td>\n",
+       "      <td>0.347169</td>\n",
+       "      <td>0.431734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.832683</td>\n",
-       "      <td>0.814818</td>\n",
-       "      <td>0.659151</td>\n",
-       "      <td>0.835837</td>\n",
-       "      <td>0.835837</td>\n",
-       "      <td>0.833854</td>\n",
-       "      <td>0.781331</td>\n",
-       "      <td>0.675690</td>\n",
-       "      <td>0.835837</td>\n",
+       "      <td>0.290651</td>\n",
+       "      <td>0.419955</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.652140</td>\n",
+       "      <td>0.428321</td>\n",
+       "      <td>0.580874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.835052</td>\n",
-       "      <td>0.835662</td>\n",
-       "      <td>0.687405</td>\n",
-       "      <td>0.861058</td>\n",
-       "      <td>0.861058</td>\n",
-       "      <td>0.861058</td>\n",
-       "      <td>0.835837</td>\n",
-       "      <td>0.798599</td>\n",
-       "      <td>0.861058</td>\n",
+       "      <td>0.470953</td>\n",
+       "      <td>0.792911</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.818857</td>\n",
+       "      <td>0.818857</td>\n",
+       "      <td>0.611038</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       random kmeans  kde kmeans   kmeans++  random SOM  kmeans SOM  \\\n",
-       "count      61.000000   61.000000  61.000000   61.000000   61.000000   \n",
-       "mean        0.819159    0.813473   0.618012    0.693520    0.701473   \n",
-       "std         0.010744    0.010611   0.053229    0.205709    0.214761   \n",
-       "min         0.800677    0.761462   0.522411    0.000431   -0.172054   \n",
-       "25%         0.812210    0.806601   0.549835    0.636704    0.633966   \n",
-       "50%         0.814218    0.813131   0.646230    0.774243    0.806392   \n",
-       "75%         0.832683    0.814818   0.659151    0.835837    0.835837   \n",
-       "max         0.835052    0.835662   0.687405    0.861058    0.861058   \n",
-       "\n",
-       "       kde kmeans SOM  kmeans++ SOM      SOM++    kde SOM  \n",
-       "count       61.000000     61.000000  61.000000  61.000000  \n",
-       "mean         0.677770      0.621770   0.619107   0.739507  \n",
-       "std          0.224464      0.175790   0.099741   0.171969  \n",
-       "min          0.058380      0.255623   0.399404   0.201198  \n",
-       "25%          0.642380      0.467525   0.536706   0.719996  \n",
-       "50%          0.793325      0.670552   0.655008   0.804698  \n",
-       "75%          0.833854      0.781331   0.675690   0.835837  \n",
-       "max          0.861058      0.835837   0.798599   0.861058  "
+       "        kmeans++  random SOM  kmeans SOM  kmeans++ SOM      SOM++    kde SOM\n",
+       "count  50.000000   50.000000        50.0     50.000000  50.000000  50.000000\n",
+       "mean    0.293441    0.284671        -1.0      0.420702   0.358563   0.470699\n",
+       "std     0.059780    0.246599         0.0      0.343144   0.143034   0.098499\n",
+       "min     0.230376   -0.391121        -1.0     -1.000000   0.121161   0.244234\n",
+       "25%     0.263892    0.119075        -1.0      0.291928   0.262058   0.396988\n",
+       "50%     0.277191    0.332560        -1.0      0.421840   0.347169   0.431734\n",
+       "75%     0.290651    0.419955        -1.0      0.652140   0.428321   0.580874\n",
+       "max     0.470953    0.792911        -1.0      0.818857   0.818857   0.611038"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
